--- a/package.json
+++ b/package.json
@@ -6,20 +6,20 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "dotenv": "^10.0.0",
-    "express": "~4.16.1",
-    "express-rate-limit": "^5.3.0",
-    "http-errors": "~1.6.3",
-    "moment": "^2.29.1",
-    "morgan": "~1.9.1",
-    "mysql2": "^2.2.5",
-    "nodemon": "^2.0.7",
+    "body-parser": "^1.20.1",
+    "cookie-parser": "~1.4.6",
+    "debug": "~4.3.4",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "express-rate-limit": "^6.7.0",
+    "http-errors": "~2.0.0",
+    "moment": "^2.29.4",
+    "morgan": "~1.10.0",
+    "mysql2": "^3.1.2",
+    "nodemon": "^2.0.20",
     "pug": "^3.0.2",
-    "sequelize": "^6.6.2",
-    "sequelize-cli": "^6.2.0",
-    "socket.io": "^4.1.2"
+    "sequelize": "^6.28.0",
+    "sequelize-cli": "^6.6.0",
+    "socket.io": "^4.6.0"
   }
 }
